[Refector] 선착순 쿠폰, 인기 상품 조회 리팩토링